[package]
name = "mounter"
version = "0.3.2"
edition = "2024"
description = "Mount remote SSH directories via SMB2-over-SFTP. No FUSE, no Docker, no sudo."
license = "Apache-2.0"
repository = "https://github.com/nitingupta910/mounter"
homepage = "https://github.com/nitingupta910/mounter"
keywords = ["ssh", "sftp", "smb", "mount", "sshfs"]
categories = ["filesystem", "network-programming", "command-line-utilities"]
readme = "../README.md"

[dependencies]
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_paths"
harness = false

[profile.release]
lto = true
strip = true
opt-level = 2
